@@ -16,12 +16,12 @@ from datetime import datetime
 email        = 'ut1@nrao.edu'
 baseDir      = '/home/vlbiobs/astronomy'
 templateFile = '/users/vlbaops/STDFILES/usno_template.key'
-#sched_base   = '/usr/local/sched'
-#sched        = '/usr/local/sched/bin/sched'
+sched_base   = '/usr/local/sched'
+sched        = '/usr/local/sched/bin/sched'
 
 # temporary hack to get around bug in released sched version
-sched_base   = '/users/cwalker/files/sched_beta'
-sched        = '/users/cwalker/files/sched_beta/bin/LINUX64SPICE/sched'
+# sched_base   = '/users/cwalker/files/sched_beta'
+# sched        = '/users/cwalker/files/sched_beta/bin/LINUX64SPICE/sched'
 
 queueVex     = 'queueVex'
 
